week02/giwoong/backend/LoginStudy/src/main/java/com/example/loginstudy/global/error/exception/InvalidGroupException.java
package com.example.loginstudy.global.error.exception;

public abstract class InvalidGroupException extends RuntimeException{
    public InvalidGroupException(String message) {
        super(message);
    }
}
